syntax = "proto3";

package proto;

message UserData {
  int64 user_id = 1;
  string email = 2;
  string phone_number = 3;
  bool gender = 4;
  string first_name = 5;
  string last_name = 6;
}

message Token {
  string token = 1;
}

service AuthService {
  rpc CheckToken(Token) returns (UserData);
}




